# vqe-hopso

./: README.md  pyproject.toml
src/: run_mpi.py  run_seq.py
src/costF/: costF_2q_IvaH2_qiskit.py  costF_8q_2x2_fermi-hubbard.py  costF_8q_LiH.py
src/optimizers/: hopso.py  hopso_final.py  hopso_final_mpi.py
src/scripts/: setup.bat
src/utils/: hopso_result_analyser_tools.py  hopso_result_handler.py
src/vqe_hopso.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
